--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -452,5 +452,19 @@
   "last_forged_block": "Poslední kovaný blok",
   "reward_income_info": "Toto je součet odměn z bloků, které jste zfalšovali s tímto účtem, jako byste byli sólo miner, a nemusí nutně odrážet váš efektivní příjem z těžby.",
   "no_block_forged": "Žádný blok zatím nebyl vykován",
-  "set_reward_recipient_on": "Připojil se dne"
+  "set_reward_recipient_on": "Připojil se dne",
+  "add_treasury_account": "Přidat účet státní pokladny",
+  "avgCommitment": "Prům. Závazek",
+  "cashback_id": "Cashback ID",
+  "distribution_tokenholders": "Distribuce držitelů tokenů",
+  "feeBurnt": "Výpalné",
+  "feeCashback": "Poplatek za vrácení peněz",
+  "mint_token": "Ražba tokenů",
+  "notifications_disabled": "Upozornění zakázána",
+  "notifications_enabled": "Oznámení povolena",
+  "settings_node": "Konfigurace uzlu",
+  "settings_notification": "Oznámení na ploše",
+  "show_in_explorer": "Otevřete v Blockchain Exploreru",
+  "toggle_desktop_notification": "Povolit nebo zakázat upozornění na ploše",
+  "updated": "Aktualizováno"
 }
