--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -432,7 +432,7 @@
   "youve_got_from": "Account __a__ got __b__ from __c__",
   "you_sent_to": "Account __a__ sent __b__ to __c__",
   "show_testnet_nodes": "Show Testnet Nodes",
-  "show_in_explorer": "Open Blockchain explorer",
+  "show_in_explorer": "Open in Blockchain Explorer",
   "message_too_long": "Message is too long",
   "reset": "Reset",
   "last_price": "Last Price",
