--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -452,5 +452,19 @@
   "last_forged_block": "最後に鍛造されたブロック",
   "reward_income_info": "これは、あなたがソロマイナーであるかのようにこのアカウントで偽造したブロック報酬の合計であり、必ずしもあなたの有効なマイニング収入を反映しているわけではありません。",
   "no_block_forged": "まだ鍛造されたブロックはありません",
-  "set_reward_recipient_on": "参加しました"
+  "set_reward_recipient_on": "参加しました",
+  "add_treasury_account": "財務アカウントを追加する",
+  "avgCommitment": "平均献身",
+  "cashback_id": "キャッシュバックID",
+  "distribution_tokenholders": "トークンホルダーの配布",
+  "feeBurnt": "焦げた料金",
+  "feeCashback": "キャッシュバック手数料",
+  "mint_token": "トークンミンティング",
+  "notifications_disabled": "通知が無効になっています",
+  "notifications_enabled": "通知が有効",
+  "settings_node": "ノード構成",
+  "settings_notification": "デスクトップ通知",
+  "show_in_explorer": "ブロックチェーンエクスプローラーで開く",
+  "toggle_desktop_notification": "デスクトップ通知を有効または無効にする",
+  "updated": "更新しました"
 }
