--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -452,5 +452,19 @@
   "last_forged_block": "Paskutinis suklastotas blokas",
   "reward_income_info": "Tai blokinių atlygių, kuriuos sukūrėte naudodami šią sąskaitą, suma, tarsi būtumėte vienas kalnakasis, ir nebūtinai atspindi jūsų faktines kasybos pajamas.",
   "no_block_forged": "Dar nėra suklastotas blokas",
-  "set_reward_recipient_on": "Prisijungė"
+  "set_reward_recipient_on": "Prisijungė",
+  "add_treasury_account": "Pridėti iždo sąskaitą",
+  "avgCommitment": "Vid. Įsipareigojimas",
+  "cashback_id": "Grynųjų pinigų grąžinimo ID",
+  "distribution_tokenholders": "Žetonų laikiklio paskirstymas",
+  "feeBurnt": "Sudegintas mokestis",
+  "feeCashback": "Grynųjų pinigų grąžinimo mokestis",
+  "mint_token": "Žetonų kaldinimas",
+  "notifications_disabled": "Pranešimai išjungti",
+  "notifications_enabled": "Pranešimai įjungti",
+  "settings_node": "Mazgo konfigūracija",
+  "settings_notification": "Darbalaukio pranešimai",
+  "show_in_explorer": "Atidarykite „Blockchain Explorer“.",
+  "toggle_desktop_notification": "Įjungti arba išjungti darbalaukio pranešimus",
+  "updated": "Atnaujinta"
 }
