--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -452,5 +452,19 @@
   "last_forged_block": "Laatst gesmeed blok",
   "reward_income_info": "Dit is de som van de blokbeloningen die je met dit account hebt gesmeed alsof je een solo-mijnwerker bent en weerspiegelt niet noodzakelijkerwijs je effectieve mijninkomen.",
   "no_block_forged": "Nog geen blok gesmeed",
-  "set_reward_recipient_on": "Aangesloten op"
+  "set_reward_recipient_on": "Aangesloten op",
+  "add_treasury_account": "Treasury-account toevoegen",
+  "avgCommitment": "Gem. Inzet",
+  "cashback_id": "Cashback-ID",
+  "distribution_tokenholders": "Token Houder Distributie",
+  "feeBurnt": "Verbrande vergoeding",
+  "feeCashback": "Cashback-kosten",
+  "mint_token": "Munten slaan",
+  "notifications_disabled": "Meldingen uitgeschakeld",
+  "notifications_enabled": "Meldingen ingeschakeld",
+  "settings_node": "Knooppuntconfiguratie",
+  "settings_notification": "Bureaublad notificaties",
+  "show_in_explorer": "Openen in Blockchain Explorer",
+  "toggle_desktop_notification": "Bureaubladmeldingen in- of uitschakelen",
+  "updated": "Bijgewerkt"
 }
