--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -452,5 +452,19 @@
   "last_forged_block": "最后锻造的块",
   "reward_income_info": "这是您使用该账户伪造的区块奖励总和，就好像您是一个单独的矿工一样，并不一定反映您的有效挖矿收入。",
   "no_block_forged": "还没有锻造块",
-  "set_reward_recipient_on": "加入"
+  "set_reward_recipient_on": "加入",
+  "add_treasury_account": "添加资金账户",
+  "avgCommitment": "平均承诺",
+  "cashback_id": "返现编号",
+  "distribution_tokenholders": "代币持有者分布",
+  "feeBurnt": "烧钱费",
+  "feeCashback": "返现费",
+  "mint_token": "代币铸造",
+  "notifications_disabled": "通知已禁用",
+  "notifications_enabled": "启用通知",
+  "settings_node": "节点配置",
+  "settings_notification": "桌面通知",
+  "show_in_explorer": "在区块链资源管理器中打开",
+  "toggle_desktop_notification": "启用或禁用桌面通知",
+  "updated": "更新"
 }
