Feat/distribution types (#1656)
* wip: working on distribution

* feat: a lot of stuff

* feat: sticky toolbar

* feat: revamped peers list

* fixes: improved dashboard loading

* fix: send messages in testnet

* chore: cleanups

* chore: translations

--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -22,6 +22,7 @@
   "add_note_to_self_q": "Add Note to Self?",
   "add_recipient": "Add Recipient",
   "add_recipient_batch": "Adding multiple recipients by CSV",
+  "add_treasury_account": "Add Treasury Account",
   "address": "Address",
   "advanced": "advanced",
   "alias": "Alias",
@@ -49,6 +50,7 @@
   "asset_transfer": "Token Transfer",
   "assets": "Tokens",
   "attachment": "Attachment",
+  "avgCommitment": "Avg. Commitment",
   "back": "Back",
   "balance": "Balance",
   "base_target": "Base Target",
@@ -67,6 +69,7 @@
   "buy": "Buy",
   "buyer": "Buyer",
   "cancel": "Cancel",
+  "cashback_id": "Cashback ID",
   "cheap_fee": "Cheap",
   "choose_delimiter": "Choose a Delimiter",
   "click_for_changes": "Click here to see what has changed",
@@ -110,6 +113,7 @@
   "delivery_deadline": "Delivery Deadline",
   "description": "Description",
   "do_not_broadcast": "Do Not Broadcast",
+  "distribution_tokenholders": "Token Holder Distribution",
   "domain": "Domain",
   "download": "Download",
   "download_at_verified_source": "Download directly from verified source",
@@ -187,6 +191,8 @@
   "escrow": "Escrow",
   "failed": "Failed",
   "fee": "Fee",
+  "feeCashback": "Cashback Fee",
+  "feeBurnt": "Burnt Fee",
   "fee_nqt": "Fee",
   "feedback": "Feedback",
   "finish": "Finish",
@@ -234,6 +240,7 @@
   "message_is_text": "Message is Text?",
   "messages": "Messages",
   "minimum_fee": "Minimum",
+  "mint_token": "Token Minting",
   "multi_out_payment": "Payments",
   "my_assets": "My Tokens",
   "name": "Name",
@@ -325,6 +332,10 @@
   "set_account_info": "Set Account Info",
   "set_reward_recipient": "Join Pool",
   "settings": "Settings",
+  "settings_node": "Node Configuration",
+  "settings_notification": "Desktop Notifications",
+  "notifications_enabled": "Notifications enabled",
+  "notifications_disabled": "Notifications disabled",
   "signature": "Signature",
   "signature_hash": "Signature Hash",
   "smart_contract": "Smart Contract",
@@ -368,6 +379,7 @@
   "update_burst_account": "Import existing account",
   "update_check": "Update Check",
   "update_up_to_date": "You have the latest release already. There is no need to update.",
+  "updated": "Updated",
   "uploaded": "Uploaded",
   "uri": "URI",
   "valid": "Valid",
@@ -412,6 +424,7 @@
   "node_successfully_connected": "Successfully connected to the node",
   "selected_node": "Currently selected node",
   "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
+  "toggle_desktop_notification": "Enable or disable Desktop Notifications",
   "commitment_zero_balance": "You have no commitment added yet",
   "multiple_recipients": "Multiple Recipients",
   "self": "self",
@@ -419,6 +432,7 @@
   "youve_got_from": "Account __a__ got __b__ from __c__",
   "you_sent_to": "Account __a__ sent __b__ to __c__",
   "show_testnet_nodes": "Show Testnet Nodes",
+  "show_in_explorer": "Open in Blockchain Explorer",
   "message_too_long": "Message is too long",
   "reset": "Reset",
   "last_price": "Last Price",
